tweaked a few ccss styles to prevent displayed information from overflowing parent div - pz

--- a/css/main.css
+++ b/css/main.css
@@ -28,19 +28,19 @@ body{
     height: 90vh;
     background-size: cover;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: #000;
     border-radius:10px 0 0 10px;
     box-shadow: .8rem .5rem .5rem black;
-
 }
 
 .form_container{
     background-color: #1b2530;
     height: 90vh;
-    padding-top: 100px;
+    padding-top: 75px;
     padding-left: 50px;
     text-align: center;
     border-radius: 0 10px 10px 0;
@@ -53,6 +53,7 @@ body{
     text-align: center;
     width: auto;
     margin: 0 auto 2rem 0;
+    overflow-y: auto;
 }
 
 .image_p{
@@ -106,13 +107,19 @@ input[type="text"] {
   }
 
   .info{
-    margin: 2rem auto 0;
-    width: 60%;
+      height: 46vh;
+    margin: 2rem auto 0;;
+    width: 100;
     display: none;
+    table-layout: fixed;
+    overflow-y: auto;
   }
+
+
   .values{
       display: flex;
       border-bottom: 1px solid #fff ;
+    margin: 0 5rem;
       filter: brightness(50%);
       padding-bottom: 10px;
   }
